	PR c++/37819 	* cp-gimplify.c (cp_genericize_r): Only fold_convert COND_EXPR 	arguments if they don't already have COND_EXPR's type.

* g++.dg/expr/bitfield11.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141118 138bc75d-0d04-0410-961f-82ee72b054a4