gcc/testsuite/g++.dg/expr/bitfield11.C
@@ -1,0 +1,13 @@
+// PR c++/37819
+// { dg-do compile }
+
+struct A
+{
+  unsigned int a : 1;
+};
+
+bool
+foo (A *x, A *y)
+{
+  x->a = y ? y->a : true;
+}
